--- a/scss/layout/_service.scss
+++ b/scss/layout/_service.scss
@@ -48,7 +48,7 @@
                 height: 100%;
                 display: flex;
                 flex-wrap: wrap;
-                row-gap: 10px;
+                row-gap: 30px;
                 li {
                     display: block;
                     width: 100%;
